SSL trained 10 epochs, model saved, and plotted results of colorizaiton

--- a/mlruns/0/c6f9a204936d4b99a13acf198b160fcc/meta.yaml
+++ b/mlruns/0/c6f9a204936d4b99a13acf198b160fcc/meta.yaml
@@ -1,5 +1,5 @@
 artifact_uri: file:///home/ronin/Dev/notebooks/machinelearningformodeling/supervised/project/mlruns/0/c6f9a204936d4b99a13acf198b160fcc/artifacts
-end_time: null
+end_time: 1717930580447
 entry_point_name: ''
 experiment_id: '0'
 lifecycle_stage: active
@@ -10,6 +10,6 @@ source_name: ''
 source_type: 4
 source_version: ''
 start_time: 1717925789736
-status: 1
+status: 3
 tags: []
 user_id: ronin
